<resources>
    <string name="app_name">SmartHome</string>

    <string name="title_section1">首頁</string>
    <string name="title_section2">設備一覽</string>
    <string name="title_section3">連結主機</string>
    <string name="title_section4">位置資訊</string>
    <string name="title_section5">監視畫面</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example"> </string>
    <string name="action_settings">設定</string>
    <string name="action_about">關於</string>

    <string name="ip_address">IP Address</string>
    <string name="connect">連接</string>
    <string name="disconnect">中斷</string>

    <string name="longitude">經度：</string>
    <string name="latitude">緯度：</string>
    <string name="distance">距離：</string>
    <string name="address">位址：</string>
    <string name="refresh">重新整理</string>

    <string name="enable">狀態：</string>
    <string name="power">電源：</string>
    <string name="channel">頻道：</string>
    <string name="temperature">溫度：</string>
    <string name="wind">風量：</string>
    <string name="type">型態：</string>
    <string name="speed">風速：</string>

    <string name="control">遙控</string>
</resources>
