<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="254dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/longitude"
            android:id="@+id/longitude"
            android:textIsSelectable="false"
            android:layout_gravity="center"
            android:gravity="left|center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/latitude"
            android:id="@+id/latitude"
            android:layout_gravity="center"
            android:textIsSelectable="false"
            android:gravity="center|left" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/distance"
            android:id="@+id/distance"
            android:layout_gravity="center"
            android:textIsSelectable="false"
            android:gravity="center|left" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/address"
        android:layout_gravity="center"
        android:textIsSelectable="false"
        android:gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh"
        android:id="@+id/refresh"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
