<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:text="@string/enable"
                android:layout_gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center"/>

            <TextView
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:id="@+id/enableTXV"
                android:layout_gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center|left" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:text="@string/type"
                android:layout_gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center"
                android:id="@+id/textView" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:id="@+id/typeTXV"
                android:layout_gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center|left" />
        </LinearLayout>

    </LinearLayout>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/control"
        android:id="@+id/controlBTN"
        android:layout_gravity="center_horizontal" />

</LinearLayout>